improved tracker bot radius.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4342,7 +4342,7 @@ BP_AIPlayer_C.Player=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
 OpenAssetsAtExit=/Game/AdvancedAI/Service_SelectATargetActor.Service_SelectATargetActor
 
 [RootWindow]
@@ -4428,8 +4428,8 @@ Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
 MRUItem0=/Game/Level/maps/VoidMap
-MRUItem1=/Game/Level/maps/TestMap
-MRUItem2=/Game/Level/maps/Wimbledon
+MRUItem1=/Game/Level/maps/Wimbledon
+MRUItem2=/Game/Level/maps/TestMap
 MRUItem3=/Game/Level/maps/Blockout_P
 MRUItem4=/Game/maps/VoidMap
 
@@ -4725,26 +4725,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem1=/Game/AdvancedAI/BP_AIPlayer
-MRUItem2=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem3=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem4=/Game/TrackerBot/BP_TrackerBot
-MRUItem5=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem6=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem7=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem8=/Game/Blueprints/Weapons/BP_AIMachineGun
-MRUItem9=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem10=/Game/AdvancedAI/Task_AttackTarget
-MRUItem11=/Game/AdvancedAI/BT_AIPlayer
-MRUItem12=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem13=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
-MRUItem14=/Game/weaponEffects/ShellEject/SM_ShellEject
-MRUItem15=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem16=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem17=/Game/AdvancedAI/EQS_FindTarget
-MRUItem18=/Game/Level/maps/VoidMap
-MRUItem19=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem0=/Game/Level/maps/VoidMap
+MRUItem1=/Game/Level/maps/Wimbledon
+MRUItem2=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem3=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem4=/Game/AdvancedAI/BP_AIPlayer
+MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem6=/Game/AdvancedAI/EnvQueryContext_FindTarget
+MRUItem7=/Game/TrackerBot/BP_TrackerBot
+MRUItem8=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem9=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem10=/Game/Blueprints/Weapons/BP_AIMachineGun
+MRUItem11=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem12=/Game/AdvancedAI/Task_AttackTarget
+MRUItem13=/Game/AdvancedAI/BT_AIPlayer
+MRUItem14=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem15=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem16=/Game/weaponEffects/ShellEject/SM_ShellEject
+MRUItem17=/Game/AdvancedAI/EQS_NearestPlayer
+MRUItem18=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem19=/Game/AdvancedAI/EQS_FindTarget
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
