Started challenge to make AI flee to cover when in low health. Created a decorator to check if health falls below the critical health to start fleeing to cover.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,6 +27,9 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNetDedicated=True
+PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -49,7 +52,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.09-01.38.04
+CoopGame.TimeStamp=2020.05.09-04.30.09
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4338,12 +4341,27 @@ REINST_BP_PlayerPawn_C_33.Activation=True
 REINST_BP_PlayerPawn_C_33.Cooking=True
 REINST_BP_PlayerPawn_C_33.Events=True
 BP_AIPlayer_C.Player=True
+BTDecorator_CompareBBEntries.FlowControl=True
+BTDecorator_CompareBBEntries.Blackboard=True
+BTDecorator_CompareBBEntries.Description=True
+BTDecorator_IsBBEntryOfClass.FlowControl=True
+BTDecorator_IsBBEntryOfClass.Blackboard=True
+BTDecorator_IsBBEntryOfClass.Description=True
+BTDecorator_ConditionalLoop.Blackboard=True
+BTDecorator_ConditionalLoop.Description=True
+NewBlueprint_C.FlowControl=True
+NewBlueprint_C.Description=True
+NewBlueprint_C.Condition=True
+Decorator_ReaminingHealth_C.FlowControl=True
+Decorator_ReaminingHealth_C.Description=True
+Decorator_ReaminingHealth_C.Condition=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
-OpenAssetsAtExit=/Game/AdvancedAI/Service_SelectATargetActor.Service_SelectATargetActor
+OpenAssetsAtExit=/Game/AdvancedAI/Decorator_DistanceTo.Decorator_DistanceTo
+OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4580,7 +4598,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -4629,7 +4647,7 @@ SSuperSpeedPowerup="\"Object.Components.mesh\" \"Object.Components.mesh.Object.S
 REINST_BP_SuperSpeedPowerup2_C_51="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_SuperSpeedPowerup2_C_55="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_SuperSpeedPowerup2_C_59="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
-NewBlueprint_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
+NewBlueprint_C=
 REINST_NewBlueprint_C_42="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 NewBlueprint1_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_SuperSpeedPowerup2_C_46="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
@@ -4657,8 +4675,8 @@ BP_EQSTestingPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.Walka
 EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EnvQueryGenerator_SimpleGrid="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator_ProjectedPoints="\"Object.Generator.ProjectionData\" "
-EnvQueryGenerator=
-EnvQueryNode=
+EnvQueryGenerator="\"Object.Generator.ProjectionData\" "
+EnvQueryNode="\"Object.Generator.ProjectionData\" "
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
@@ -4725,26 +4743,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/maps/VoidMap
-MRUItem1=/Game/Level/maps/Wimbledon
-MRUItem2=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem3=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem4=/Game/AdvancedAI/BP_AIPlayer
-MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem0=/Game/AdvancedAI/BT_AIPlayer
+MRUItem1=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem2=/Game/AdvancedAI/Decorator_ReaminingHealth
+MRUItem3=/Game/AdvancedAI/NewBlueprint
+MRUItem4=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem5=/Game/AdvancedAI/EQS_CoverFinding
 MRUItem6=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem7=/Game/TrackerBot/BP_TrackerBot
-MRUItem8=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem9=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem10=/Game/Blueprints/Weapons/BP_AIMachineGun
-MRUItem11=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem12=/Game/AdvancedAI/Task_AttackTarget
-MRUItem13=/Game/AdvancedAI/BT_AIPlayer
-MRUItem14=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem15=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
-MRUItem16=/Game/weaponEffects/ShellEject/SM_ShellEject
-MRUItem17=/Game/AdvancedAI/EQS_NearestPlayer
-MRUItem18=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem19=/Game/AdvancedAI/EQS_FindTarget
+MRUItem7=/Game/AdvancedAI/Task_AttackTarget
+MRUItem8=/Game/Level/maps/VoidMap
+MRUItem9=/Game/Level/maps/Wimbledon
+MRUItem10=/Game/AdvancedAI/BP_AIPlayer
+MRUItem11=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem13=/Game/TrackerBot/BP_TrackerBot
+MRUItem14=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem15=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem16=/Game/Blueprints/Weapons/BP_AIMachineGun
+MRUItem17=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem18=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem19=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4836,6 +4854,8 @@ MRUItem19=/Game/AdvancedAI/EQS_FindTarget
 /Game/weaponEffects/ShellEject/M_ShellEjectMetal.M_ShellEjectMetal=0
 /Game/Blueprints/Weapons/BP_Shotgun.BP_Shotgun=0
 /Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState=0
+/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding=0
+/Game/AdvancedAI/NewBlueprint.NewBlueprint=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
