--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4355,13 +4355,20 @@ NewBlueprint_C.Condition=True
 Decorator_ReaminingHealth_C.FlowControl=True
 Decorator_ReaminingHealth_C.Description=True
 Decorator_ReaminingHealth_C.Condition=True
+Decorator_RemainingHealth_C.FlowControl=True
+Decorator_RemainingHealth_C.Default=True
+Decorator_RemainingHealth_C.Description=True
+Decorator_RemainingHealth_C.Condition=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/AdvancedAI/Decorator_RemainingHealth.Decorator_RemainingHealth
 OpenAssetsAtExit=/Game/AdvancedAI/Decorator_DistanceTo.Decorator_DistanceTo
 OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
+OpenAssetsAtExit=/Game/AdvancedAI/EnvQueryContext_FindTarget.EnvQueryContext_FindTarget
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4549,10 +4556,11 @@ BP_AIPlayer_C=BP_AIPlayer_C.Collision.Collision,BP_AIPlayer_C.PostProcess.Lens,
 Decorator_DistanceTo_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 FloatProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 Service_SelectATargetActor_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+Decorator_ReaminingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object=
+Object="\"Object.Generator.ProjectionData\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4702,7 +4710,7 @@ EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 EnvQueryGenerator_Donut="\"Object.Generator.ProjectionData\" "
 EnvQueryTest_Trace="\"Object.Trace.TraceData\" "
-EnvQueryTest=
+EnvQueryTest="\"Object.Trace.TraceData\" "
 REINST_BP_PlayerPawn_C_227="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_231="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BTTask_RunEQSQuery="\"Object.EQS.EQSRequest\" "
@@ -4721,10 +4729,10 @@ REINST_BP_AIPlayer_C_63="\"Object.Components.camera.Object.PostProcess.PostProce
 REINST_BP_AIPlayer_C_53="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
+RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/AdvancedAI/BP_AI.BP_AI;
 RecentlyPlaced=/Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation;
@@ -4743,26 +4751,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/BT_AIPlayer
-MRUItem1=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem2=/Game/AdvancedAI/Decorator_ReaminingHealth
-MRUItem3=/Game/AdvancedAI/NewBlueprint
-MRUItem4=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem5=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem6=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem7=/Game/AdvancedAI/Task_AttackTarget
-MRUItem8=/Game/Level/maps/VoidMap
-MRUItem9=/Game/Level/maps/Wimbledon
-MRUItem10=/Game/AdvancedAI/BP_AIPlayer
-MRUItem11=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem13=/Game/TrackerBot/BP_TrackerBot
-MRUItem14=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem15=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem16=/Game/Blueprints/Weapons/BP_AIMachineGun
-MRUItem17=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem18=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
-MRUItem19=/Game/weaponEffects/ShellEject/P_Rifle_ShellEject
+MRUItem0=/Game/AdvancedAI/EnvQueryContext_FindTarget
+MRUItem1=/Game/AdvancedAI/EQS_SecureCoverFinding
+MRUItem2=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem3=/Game/AdvancedAI/BT_AIPlayer
+MRUItem4=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem5=/Game/AdvancedAI/Decorator_ReaminingHealth
+MRUItem6=/Game/AdvancedAI/NewBlueprint
+MRUItem7=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem8=/Game/AdvancedAI/Task_AttackTarget
+MRUItem9=/Game/Level/maps/VoidMap
+MRUItem10=/Game/Level/maps/Wimbledon
+MRUItem11=/Game/AdvancedAI/BP_AIPlayer
+MRUItem12=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem13=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem14=/Game/TrackerBot/BP_TrackerBot
+MRUItem15=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem16=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem17=/Game/Blueprints/Weapons/BP_AIMachineGun
+MRUItem18=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem19=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
