Created a task to heal the AI.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4356,16 +4356,17 @@ Decorator_RemainingHealth_C.FlowControl=True
 Decorator_RemainingHealth_C.Default=True
 Decorator_RemainingHealth_C.Description=True
 Decorator_RemainingHealth_C.Condition=True
+Task_SelfHeal_C.Description=True
+Task_SelfHeal_C.Task=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/AdvancedAI/Decorator_RemainingHealth.Decorator_RemainingHealth
-OpenAssetsAtExit=/Game/AdvancedAI/Decorator_DistanceTo.Decorator_DistanceTo
 OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
-OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
-OpenAssetsAtExit=/Game/AdvancedAI/EnvQueryContext_FindTarget.EnvQueryContext_FindTarget
+OpenAssetsAtExit=/Game/AdvancedAI/Task_AttackTarget.Task_AttackTarget
+OpenAssetsAtExit=/Game/AdvancedAI/EQS_SecureCoverFinding.EQS_SecureCoverFinding
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4557,7 +4558,7 @@ Decorator_ReaminingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPa
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object="\"Object.Trace.TraceData\" "
+Object=
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4748,26 +4749,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem1=/Game/AdvancedAI/EQS_SecureCoverFinding
-MRUItem2=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem3=/Game/AdvancedAI/BT_AIPlayer
-MRUItem4=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem5=/Game/AdvancedAI/Decorator_ReaminingHealth
-MRUItem6=/Game/AdvancedAI/NewBlueprint
-MRUItem7=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem8=/Game/AdvancedAI/Task_AttackTarget
-MRUItem9=/Game/Level/maps/VoidMap
-MRUItem10=/Game/Level/maps/Wimbledon
-MRUItem11=/Game/AdvancedAI/BP_AIPlayer
-MRUItem12=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem13=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem14=/Game/TrackerBot/BP_TrackerBot
-MRUItem15=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem16=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem17=/Game/Blueprints/Weapons/BP_AIMachineGun
-MRUItem18=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem19=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
+MRUItem0=/Game/AdvancedAI/Task_AttackTarget
+MRUItem1=/Game/AdvancedAI/Task_SelfHeal
+MRUItem2=/Game/AdvancedAI/EnvQueryContext_FindTarget
+MRUItem3=/Game/AdvancedAI/EQS_SecureCoverFinding
+MRUItem4=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem5=/Game/AdvancedAI/BT_AIPlayer
+MRUItem6=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem7=/Game/AdvancedAI/Decorator_ReaminingHealth
+MRUItem8=/Game/AdvancedAI/NewBlueprint
+MRUItem9=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem10=/Game/Level/maps/VoidMap
+MRUItem11=/Game/Level/maps/Wimbledon
+MRUItem12=/Game/AdvancedAI/BP_AIPlayer
+MRUItem13=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem14=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem15=/Game/TrackerBot/BP_TrackerBot
+MRUItem16=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem17=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem18=/Game/Blueprints/Weapons/BP_AIMachineGun
+MRUItem19=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4861,6 +4862,7 @@ MRUItem19=/Game/weaponEffects/ShellEject/M_ShellEjectMetal
 /Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState=0
 /Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding=0
 /Game/AdvancedAI/NewBlueprint.NewBlueprint=0
+/Game/AdvancedAI/Task_AttackTarget.Task_AttackTarget=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
